--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -1,4 +1,4 @@
-<div class="main-wrap block-group">
+<div class="block-group main-wrap">
     <div class="block">
 		This is the content area.
     </div>
