--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -1,5 +1,34 @@
-<div class="block-group main-wrap">
-    <div class="block">
-		This is the content area.
+<div class="main-wrap header block-group">
+    <div class="logo block">
+		<img src="images/logo.png" alt="InvestUs" />
     </div>
+    <div class="header-login block">
+		<button>Log in</button>
+    </div>
+</div>
+
+<div class="block-group">
+	<div class="block">
+		<div class="main-wrap call-to-action block-group">
+			<div class="call-left block">&nbsp;</div>
+			<div class="call-right block">
+				<div class="box">
+					<h2>You invest</h2>
+					<form>
+						<input class="invest-money" placeholder="100" />
+					</form>
+					<h3> and get </h3>
+					<h1>...</h1>
+					<form>
+						<button class="start-now">Start now</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="main-wrap block-group">
+	<div class="landing-bottom block">LOL
+	</div>
 </div>
