--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -4,7 +4,109 @@
 .item { width: 50%; } /* 2 columns */
 
 
+.header {
+	.header-login {
+		button {
+			padding: 10px 15px;
+		    margin: 20px auto;
+		    color: #000;
+		    background-color: $white;
+		    border: 1px solid #000;
+			-webkit-border-radius: 10px;
+			-moz-border-radius: 10px;
+			border-radius: 10px;
+		    cursor: pointer;
 
+		    &:hover {
+				background: $logo-blue;
+				color: $dark-blue;
+				border: 1px solid $dark-blue;
+			}
+		}
+	}
+}
+
+.call-to-action {
+	background: url(../images/landing_background.png);
+	height: 371px;
+
+	.call-left {
+		width: 60%;
+	}
+	.call-right {
+		width: 40%;
+		position: relative;
+
+		.box {
+			background: $other-blue;
+			-webkit-border-radius: 10px;
+			-moz-border-radius: 10px;
+			border-radius: 10px;
+			width: 200px;
+			padding: 2em;
+			margin-top: 2em;
+			margin-left: 6em;
+			
+			h1,h2,h3{
+				margin:0;
+				padding:0;
+				color: $white;
+			}
+			h2 {
+				font-weight: 300;
+			}
+			h3 {
+				text-align: right;
+				font-size: 1em;
+			}
+			h1 {
+				text-align: center;
+			}
+
+			form {
+				position: relative;
+				color: $dark-blue;
+				font-size: 1em;
+				font-family: $font-lato;
+				font-weight: 300;
+
+				input, button{
+					margin: 0 auto;
+					text-align: center;
+					padding: 10px 15px;
+				}
+				
+				input.invest-money {
+					color: $dark-blue;
+					font-family: $font-lato;
+					font-weight: 300;
+					-webkit-border-radius: 10px;
+					-moz-border-radius: 10px;
+					border-radius: 10px;
+					background: $white;
+				    border: none;
+				    outline: none;
+				}
+
+				button.start-now {
+					padding: 10px 15px;
+				    color: $white;
+				    background-color: $logo-blue;
+				    border: none;
+					-webkit-border-radius: 10px;
+					-moz-border-radius: 10px;
+					border-radius: 10px;
+				    cursor: pointer;
+				}
+			}
+		}
+	}
+}
+
+.landing-bottom {
+	background: url(../images/landing_bottom.png);
+	height: 1280px;
+}
 
 
 /***************************** TABLETS *****************************/
@@ -20,6 +122,15 @@
 	.main-wrap {
 		width: 1280px;
 		margin: 0 auto;
+	}
+	.header {
+		padding: 3em 0 1em 0;
+		.logo, .header-login {
+			width: 50%;
+		}
+		.header-login {
+			text-align: right;
+		}
 	}
 	.item { width: 20%; } /* 5 columns */
 }
