--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -1,9 +1,9 @@
 <div class="main-wrap header block-group">
     <div class="logo block">
-		<img src="images/logo.png" alt="InvestUs" />
-    </div>
+		<a href="http://localhost:8080/#/"><img src="images/logo.png" alt="InvestUs" /></a>
+    </div>	
     <div class="header-login block">
-		<button>Log in</button>
+		<a href="#/login"><button>Log in</button></a>
     </div>
 </div>
 
@@ -17,12 +17,13 @@
 					<form>
 						<input class="invest-money" placeholder="100" />
 					</form>
-					<h3> and get </h3>
-					<h1>...</h1>
+					<h3> per month and get<span style="vertical-align:super; font-size:75%">*</span></h3>
+					<h1>55€</h1>
 					<form>
-						<button class="start-now">Start now</button>
+						<a href="#/login"><button class="start-now">Start now</button></a>
 					</form>
 				</div>
+				<span class="footnote">*by investing every month 100€ for 5 years</span>
 			</div>
 		</div>
 	</div>
