--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -112,6 +112,8 @@
 
 .landing-bottom {
 	background: url(../images/landing_bottom.png);
+	background-position: center;
+	width: 100%;
 	height: 1280px;
 }
 
@@ -213,6 +215,25 @@
 		text-align: center;
 		text-shadow: 0 1px 0 rgba(255,255,255,0.2);
 		border-radius: 100%;
+	}
+}
+
+.footer-container {
+	margin: 0 auto;
+	text-align: center;
+
+	.footer, .copyright {
+		font-family: $font-lato;
+		font-weight: 100;
+		color: rgb(0,0,0);
+	}
+	.footer {
+		font-size: 2em;
+		padding: 1em 0;
+	}
+	.copyright {
+		font-size: 1em;
+		padding-bottom: 2em;
 	}
 }
 
