--- a/web-app/views/investment.html
+++ b/web-app/views/investment.html
@@ -1,5 +1,16 @@
 <div class="main-wrap block-group">
-    <div class="block">
-		This is the content area.
+    <div class="main-menu block">
+		<ul>
+			<li>> About</li>
+			<li>> Investments</li>
+		</ul>
+    </div>
+    <div class="main-investment block-group">
+    	<div class="block">
+    		Your investments
+    	</div>
+    	<div class="block">
+    		Your stock graph
+    	</div>
     </div>
 </div>
