--- a/web-app/css/base.css
+++ b/web-app/css/base.css
@@ -314,6 +314,8 @@ textarea {
 
 .landing-bottom {
   background: url(../images/landing_bottom.png);
+  background-position: center;
+  width: 100%;
   height: 1280px; }
 
 .log-in form {
@@ -393,6 +395,20 @@ textarea {
   text-align: center;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
   border-radius: 100%; }
+
+.footer-container {
+  margin: 0 auto;
+  text-align: center; }
+  .footer-container .footer, .footer-container .copyright {
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    color: black; }
+  .footer-container .footer {
+    font-size: 2em;
+    padding: 1em 0; }
+  .footer-container .copyright {
+    font-size: 1em;
+    padding-bottom: 2em; }
 
 /***************************** TABLETS *****************************/
 @media (min-width: 40em) {
