--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -1,11 +1,3 @@
-<div class="main-wrap header block-group">
-    <div class="logo block">
-		<a href="http://localhost:8080/#/"><img src="images/logo.png" alt="InvestUs" /></a>
-    </div>	
-    <div class="header-login block">
-		<a href="#/login"><button>Log in</button></a>
-    </div>
-</div>
 
 <div class="block-group">
 	<div class="block">
@@ -30,6 +22,6 @@
 </div>
 
 <div class="main-wrap block-group">
-	<div class="landing-bottom block">LOL
+	<div class="landing-bottom block">&nbsp;
 	</div>
 </div>
