--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -7,15 +7,15 @@
 				<div class="box">
 					<h2>You invest</h2>
 					<form>
-						<input class="invest-money" placeholder="100" />
+						<input class="invest-money" placeholder="100" />per month for 5 years
 					</form>
-					<h3> per month and get<span style="vertical-align:super; font-size:75%">*</span></h3>
+					<h3> and you could gain</h3>
 					<h1>55€</h1>
+					<h3>with InvestUs</h3>
 					<form>
 						<a href="#/login"><button class="start-now">Start now</button></a>
 					</form>
 				</div>
-				<span class="footnote">*by investing every month 100€ for 5 years</span>
 			</div>
 		</div>
 	</div>
