Login vs Sign up

--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -34,6 +34,11 @@ a:hover, a:active {
 		position: absolute;
 		top: 50%;
 		right: 10%;
+		
+		// If user is logged out
+		.sign-up-button {
+			padding-right: 1em;
+		}
 		button {
 			padding: 10px 30px;
 		    color: #000;
@@ -52,6 +57,11 @@ a:hover, a:active {
 				border: 1px solid $dark-blue;
 			}
 		}
+		.log-in-link {
+			font-weight: 700;
+		}
+
+		// If user is logged in
 		.logged-in {
 			color: $primary-light;
 			font-size: 0.9em;
@@ -145,6 +155,9 @@ a:hover, a:active {
 				    color: $white;
 				    background-color: $logo-blue;
 				    cursor: pointer;
+					border: 1px solid $dark-blue;
+					border-width: 1px 1px 3px;
+					box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
 				}
 			}
 		}
