--- a/web-app/views/index.html
+++ b/web-app/views/index.html
@@ -7,7 +7,7 @@
 				<div class="box">
 					<h2>You invest</h2>
 					<form>
-						<input class="invest-money" placeholder="100" />per month for 5 years
+						<input class="invest-money"  onfocus="this.placeholder = ''" onblur="this.placeholder = '100'"  />per month for 5 years
 					</form>
 					<h3> and you could gain</h3>
 					<h1>55€</h1>
