--- a/web-app/views/investment.html
+++ b/web-app/views/investment.html
@@ -26,8 +26,9 @@
 	    		<div class="block w-30">Invest more</div>
 	    		<div class="block w-70">
 	    			<form>
-						<input class="add-more-input" placeholder="100" />
-						<button class="add-more-button">Add</button>
+						<input class="add-more-input" onfocus="this.placeholder = ''" onblur="this.placeholder = '100'" />
+						<button class="add-more-button">Invest</button>
+						<button class="add-more-button">Sell stock</button>
 					</form>
 	    		</div>
 	    	</div>
