--- a/web-app/views/login.html
+++ b/web-app/views/login.html
@@ -2,20 +2,18 @@
 <div class="block-group">
 	<div class="block">
 		<div class="main-wrap log-in block-group">
-			<form action="index.html" method="post">
+			<form ng-submit="logIn()">
       
 		        <h1>Log in as existing user</h1>
 		        
 		        <fieldset>
 		          <label for="mail">Email:</label>
-		          <input type="email" id="mail" name="user_email">
+		          <input type="email" id="mail" name="user_email" ng-model="authData.username">
 		          
 		          <label for="password">Password:</label>
-		          <input type="password" id="password" name="user_password">
-		          
+		          <input type="password" id="password" name="user_password" ng-model="authData.password">
 		        </fieldset>
 		        
-		        </fieldset>
 		        <button type="submit">Log in</button>
 		      </form>
 		</div>
