Updated banner + logo

--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -28,6 +28,9 @@ a:hover, a:active {
 	.logo, .header-login {
 		width: 50%;
 	}
+	.logo {
+		padding-left: 1em;
+	}
 
 	.header-login {
 		text-align: right;
