--- a/web-app/views/about.html
+++ b/web-app/views/about.html
@@ -1,16 +1,19 @@
 <div class="main-wrap block-group">
     <div class="main-menu block">
 		<ul>
-			<a href="/about" class=""><li>About</li></a>
-			<a href="/investment" class="current"><li>Investments</li></a>
+			<a href="#/about" class=""><li>About</li></a>
+			<a href="#/investment" class="current"><li>Investments</li></a>
 		</ul>
     </div>
     <div class="main-about block-group">
     	<div class="block">
     		<h1>About InvestUs</h1>
     		<h3>Simple</h3>
+    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non iaculis orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec orci nibh, suscipit et eros quis, fringilla viverra urna. Donec finibus justo et aliquam luctus. Cras non urna dictum ex consectetur tempus. Suspendisse massa ante, iaculis vitae convallis non, malesuada et felis. Praesent accumsan elementum sodales. Morbi nec commodo nulla. Suspendisse luctus urna at blandit iaculis. Pellentesque vel nisi mi.</p>
     		<h3>Safe investment platform</h3>
+    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non iaculis orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec orci nibh, suscipit et eros quis, fringilla viverra urna. Donec finibus justo et aliquam luctus. Cras non urna dictum ex consectetur tempus. Suspendisse massa ante, iaculis vitae convallis non, malesuada et felis. Praesent accumsan elementum sodales. Morbi nec commodo nulla. Suspendisse luctus urna at blandit iaculis. Pellentesque vel nisi mi.</p>
     		<h3>Low fees</h3>
+    		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non iaculis orci. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec orci nibh, suscipit et eros quis, fringilla viverra urna. Donec finibus justo et aliquam luctus. Cras non urna dictum ex consectetur tempus. Suspendisse massa ante, iaculis vitae convallis non, malesuada et felis. Praesent accumsan elementum sodales. Morbi nec commodo nulla. Suspendisse luctus urna at blandit iaculis. Pellentesque vel nisi mi.</p>
     	</div>
     </div>
 </div>
