--- a/web-app/views/investment.html
+++ b/web-app/views/investment.html
@@ -1,8 +1,8 @@
 <div class="main-wrap block-group">
     <div class="main-menu block">
 		<ul>
-			<a href="/about" class=""><li>About</li></a>
-			<a href="/investment" class="current"><li>Investments</li></a>
+			<a href="#/about" class=""><li>About</li></a>
+			<a href="#/investment" class="current"><li>Investments</li></a>
 		</ul>
     </div>
     <div class="main-investment block-group">
