--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -308,7 +308,7 @@ a:hover, a:active {
 		
 	}
 }
-.main.investment, .main-about {
+.main-investment, .main-about {
 	width: 80%;
 }
 .main-investment {
