--- a/web-app/css/_main.scss
+++ b/web-app/css/_main.scss
@@ -362,6 +362,13 @@ a:hover, a:active {
 			}
 		}
 	}
+
+	.send-to {
+		padding-left: 30%;
+		font-size: 75%;
+		color: $dark-blue;
+		text-align: left;
+	}
 }
 
 .footer-container {
