--- a/web-app/views/investment.html
+++ b/web-app/views/investment.html
@@ -23,7 +23,7 @@
 	    		<div class="block w-16">&nbsp;</div>
 	    	</div>
 	    	<div class="w-100 add-more-box block-group">
-	    		<div class="block w-30">Invest more</div>
+	    		<div class="block w-30">&nbsp;</div>
 	    		<div class="block w-70">
 	    			<form>
 						<input class="add-more-input" onfocus="this.placeholder = ''" onblur="this.placeholder = '100'" />
@@ -32,9 +32,30 @@
 					</form>
 	    		</div>
 	    	</div>
+	    	<!-- FOR INVEST -->
+	    	<div class="w-100 block-group">
+	    		<div class="block">
+	    			<p>Please transfer 0 EUR to</p>
+	    			<div class="send-to">
+					<strong>Receiver</strong> InvestUs Inc. <br />
+					<strong>Reference number</strong> 123456789<br />
+					<strong>IBAN</strong> EE691010010638748015<br />
+	    			</div>
+	    		</div>
+	    	</div>
+	    	<!-- FOR SELL -->
+	    	<div class="w-100 block-group">
+	    		<div class="block">
+	    			<p>0 EUR are being transfered to</p>
+	    			<div class="send-to">
+					<strong>Receiver</strong> Name Surname <br />
+					<strong>IBAN</strong> EE691010010638748015<br />
+	    			</div>
+	    		</div>
+	    	</div>
     	</div>
     	<div class="block">
-    		Your stock graph
+    		
     	</div>
     </div>
 </div>
