Logo to the footer

--- a/web-app/css/base.css
+++ b/web-app/css/base.css
@@ -514,8 +514,7 @@ a:hover, a:active {
     font-weight: 100;
     color: black; }
   .footer-container .footer {
-    font-size: 3em;
-    padding: 1em 0; }
+    font-size: 3em; }
   .footer-container .copyright {
     font-size: 1em;
     padding-bottom: 2em; }
